Deep rewrite of Concurrency, Memory, and Valhalla topics (batch 2)
by-topic/concurrency/concurrency/index.md (863 → 1312 lines):
- synchronized internals: mark word, thin/fat lock, inflation
- AQS deep dive: CLH queue, state semantics, acquire flow
- ConcurrentHashMap: JDK 7 segments → JDK 8 CAS+synchronized
- StampedLock: optimistic read, lock downgrade
- ForkJoinPool: work-stealing, ManagedBlocker, common pool
- CompletableFuture: completion chain, exception strategies
- Virtual threads + traditional concurrency interaction
- Debugging: thread dump, deadlock detection, JFR events

by-topic/core/memory/index.md (656 → 1092 lines):
- JVM memory regions: heap generations, Metaspace, stacks, code cache
- CompressedOops: address calculation, zero-based, 32GB boundary
- Compact Object Headers: 12→8 byte layout, klass in mark word
- Memory barriers & JMM: happens-before, volatile, x86 vs AArch64
- NMT practice: leak detection workflow, diff analysis
- Container memory: cgroup, MaxRAMPercentage, OOMKilled debugging

by-topic/core/valhalla/index.md (459 → 1010 lines):
- Value Classes (JEP 401): syntax, identity-free, flattening, null
- Unified Generics (JEP 402): List<int>, erasure vs specialization
- Compact Object Headers synergy with Valhalla
- Performance estimates with caveats
- 12-year timeline explained (Q-World → L-World → current)
- Migration preparation: JEP 390, code patterns, checklist

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>